--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -455,5 +455,11 @@
     <ClCompile Include="프로그래머스_단어 변환.cpp">
       <Filter>프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="BaekjoonOnlineJudge_1012.cpp">
+      <Filter>BaekjoonOnlineJudge</Filter>
+    </ClCompile>
+    <ClCompile Include="프로그래머스_타겟 넘버.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
