--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -461,5 +461,8 @@
     <ClCompile Include="프로그래머스_타겟 넘버.cpp">
       <Filter>프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="프로그래머스_네트워크.cpp">
+      <Filter>프로그래머스</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
